minor formatting change in index

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 	<button id="search-cmd">Search</button>
       </div>
 
-      <div id="search-results" class=" container">
+      <div class="container">
+	<div id="search-results" class="row">
+	</div>
       </div>
       
     </div>
