--- a/edit.html
+++ b/edit.html
@@ -27,8 +27,10 @@
       </div>
 
       <div class="page-search-bar">
+	<span id="prev-cmd-holder"></span>
 	<input type="text" id="search-string" />
 	<button id="search-cmd">Search</button>
+	<span id="next-cmd-holder"></span>
       </div>
 
       <div id="search-results" class=" container">
