linting and styling

--- a/static/index.html
+++ b/static/index.html
@@ -43,7 +43,11 @@
 
 	<div id="search-results">
 	</div>
-      
+
+        <div class="page-bottom-underline"></div>
+        <div class="footer">
+          Made with Node.js, Express, Google Youtube API and Jquery
+        </div>
   </div>
   </body>
   
